fix arrow overlapp

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -139,7 +139,7 @@ main{
     left: 0;
     right: 0; */
     bottom: 1.5rem;
-    left: 5rem;
+    left: 4.4rem;
     margin: 0 auto;
     /* width: 40%; */
     display: flex;
@@ -186,10 +186,11 @@ main{
     font-size: 1.5rem;
     position: fixed;
     bottom: 2rem;
-    left: 0;
+    /* left: 0;
     right: 0;
     margin: 0 auto;
-    width: 90%;
+    width: 90%; */
+    right: 4.4rem;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
